packages/terra-date-input/src/DateInputField.module.scss
// Themes
@import './orion-fusion-theme/DateInputField.module';
@import './clinical-lowlight-theme/DateInputField.module';

:local {
  .date-input-field {
    border: 0;
    margin-bottom: var(--terra-date-input-field-margin-bottom, 1.428em);
    max-width: 72.857rem;
    padding: 0;
  }

  .is-inline {
    display: inline-block;
    margin-right: var(--terra-date-input-field-inline-margin-right, 0.7143em);
    vertical-align: top;
  }

  .legend-group {
    font-size: var(--terra-date-input-field-legend-font-size, 1rem);
    line-height: 1.29;
    margin-bottom: var(--terra-date-input-field-legend-margin-bottom, 0.357em);
    text-align: left;
  }

  .legend-group-hidden {
    height: 1px;
    left: -10000px;
    overflow: hidden;
    position: absolute;
    top: auto;
    width: 1px;
  }

  .legend {
    color: var(--terra-date-input-field-legend-color, rgba(0, 0, 0, 0.8));
    font-weight: var(--terra-date-input-field-legend-font-weight, bold);
  }

  .error-icon,
  .error-icon-hidden {
    display: var(--terra-date-input-field-legend-error-icon-display, none);
    padding-right: var(--terra-date-input-field-legend-error-icon-padding-right);
  }

  .required,
  .required-hidden {
    color: var(--terra-date-input-field-legend-required-color , #e50000);
    display: inline-block;
    padding-right: var(--terra-date-input-field-legend-required-padding-right, 0.357em);
  }

  /**
   * We need these to be visually hidden so that inputs do not auto expand
   * or shrink when the elements state changes from valid to invalid.
   */
  .error-icon-hidden,
  .required-hidden {
    visibility: hidden;
  }

  .optional {
    display: inline-block;
    font-style: var(--terra-date-input-field-legend-optional-font-style, italic);
    padding-left: var(--terra-date-input-field-legend-optional-padding-left, 0.357em);
  }

  .help-text {
    color: var(--terra-date-input-field-help-text-color, rgba(0, 0, 0, 0.55));
    font-size: var(--terra-date-input-field-help-text-font-size, 0.857rem);
    font-weight: var(--terra-date-input-field-help-text-font-weight, normal);
    line-height: 1.25;
    margin-top: var(--terra-date-input-field-help-text-margin-top, 0.357em);
    text-align: left;
  }

  .error-text {
    color: var(--terra-date-input-field-error-text-color, #e50000);
    font-size: var(--terra-date-input-field-error-text-font-size, 0.857rem);
    font-weight: var(--terra-date-input-field-error-text-font-weight, normal);
    line-height: 1.25;
    margin-top: var(--terra-date-input-field-error-text-margin-top, 0.357em);
    text-align: left;
  }
}

